--- a/src/componentes/episodios/tarjeta-episodio.css
+++ b/src/componentes/episodios/tarjeta-episodio.css
@@ -1,7 +1,7 @@
 .tarjeta-episodio {
   display: flex;
   flex-direction: column;
-  width: fit-content;
+  width: 23rem;
   background-color: #d0d0d0;
   padding: 10px 20px;
   border-radius: 5px;
