--- a/src/componentes/layout/encabezado.css
+++ b/src/componentes/layout/encabezado.css
@@ -1,9 +1,9 @@
 header {
-  background-color: white;
+  background-color: greenyellow;
   border-bottom: 1px solid #d0d0d0;
   width: calc(100% - 60px);
   color: black;
-  padding: 25px 30px;
+  padding: 5px 30px;
 }
 
 header > div {
@@ -11,6 +11,11 @@ header > div {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+}
+
+header > div img {
+  margin: 0;
+  width: 250px;
 }
 
 header > div h2{
